# hsbugzilla

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  bugzilla.cabal  changelog
demo/: BugzillaDemo.hs
src/Web/: Bugzilla.hs
src/Web/Bugzilla/: Internal.hs  Search.hs
src/Web/Bugzilla/Internal/: Network.hs  Search.hs  Types.hs
tests/: TestBugzilla.hs
