name:                bugzilla
version:             0.2.1.2
synopsis:            A Haskell interface to the Bugzilla native REST API
description:         This package is designed to provide an easy-to-use, typesafe
                     interface to querying Bugzilla from Haskell.
homepage:            https://github.com/sethfowler/hsbugzilla
license:             BSD3
license-file:        LICENSE
author:              Seth Fowler
maintainer:          mark.seth.fowler@gmail.com
copyright:           Copyright 2014 Seth Fowler
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     changelog
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/sethfowler/hsbugzilla.git

flag BuildDemo
  description:  Build the 'bugzilla' demo program
  default:      False

library
  ghc-options:         -Wall
  exposed-modules:     Web.Bugzilla,
                       Web.Bugzilla.Search
  other-modules:       Web.Bugzilla.Internal.Network,
                       Web.Bugzilla.Internal.Search,
                       Web.Bugzilla.Internal.Types
  build-depends:       base >=4.6 && <4.14,
                       aeson >=0.7 && <1.5,
                       blaze-builder >=0.3 && <0.5,
                       bytestring >=0.10 && <0.11,
                       connection >=0.2 && <0.4,
                       containers >=0.5 && <0.7,
                       http-client > 0.4.30,
                       http-conduit >=2.0 && <2.4,
                       http-types >=0.8 && <0.13,
                       iso8601-time >=0.1 && <1.6,
                       resourcet >=0.4 && <1.3,
                       text >=0.11 && <1.3,
                       time >=1.4 && <1.10,
                       transformers >=0.3 && <0.6,
                       unordered-containers >=0.2 && <0.3,
                       vector >= 0.10 && <0.13
  hs-source-dirs:      src
  default-language:    Haskell2010

executable bugzilla
  if flag(BuildDemo)
    buildable:         True
  else
    buildable:         False

  ghc-options:         -Wall
  main-is:             BugzillaDemo.hs
  build-depends:       base >=4.6 && <4.14,
                       bugzilla,
                       containers >=0.5 && <0.7,
                       text >=0.11 && <1.3,
                       time >=1.4 && <1.10
  hs-source-dirs:      demo
  default-language:    Haskell2010
